# Repository-Reconnaissance

./: .env.example  .gitignore  .replit  AGENTS.md  CHANGELOG.md  CONTACT.md  CONTRIBUTING.md  GITHUB_PROFILE_SETUP.md  HARDENING_SUMMARY.md  LICENSE  Makefile  ONBOARDING.md  PROFILE.md  PUBLIC.md  README.md  REBASE_VERIFICATION_REPORT.md  RISKS_AND_GAPS.md  TYPECHECK_TODO.md  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
attached_assets/: Pasted-Below-are-strict-comprehensive-copy-paste-instructions-_1771142673233.txt  Pasted-Below-is-a-copy-paste-message-you-can-send-to-the-Repli_1771151387641.txt  Pasted-Below-is-a-copy-paste-spec-for-Replit-Agents-It-is-writ_1771155927087.txt  Pasted-Copy-paste-the-following-directly-to-the-Replit-agents-_1771151132151.txt  Pasted-Copy-paste-this-to-Replit-Agents-It-is-a-stabilization-_1771158358722.txt  Pasted-Copy-paste-this-to-Replit-Agents-It-s-written-as-a-repo_1771157219918.txt  Pasted-Good-the-behavioral-proof-succeeded-reset-works-ok-true_1771150925857.txt  Pasted-Got-it-Copilot-said-it-did-it-but-you-need-reproducible_1771067676312.txt  Pasted-Send-this-verbatim-to-the-Replit-agent-It-s-written-as-_1771088439408.txt  Pasted-This-is-materially-better-you-corrected-the-contract-dr_1771086124430.txt  Pasted-This-passes-You-now-have-repo-wide-doc-coverage-that-is_1771157647862.txt  Pasted-Understood-Here-s-the-final-delta-you-should-send-to-th_1771151546238.txt  Pasted-Yep-that-runAnalysis-you-pasted-does-implement-the-6-gu_1771149943703.txt  (+2 more)
(+258 files in other folders)
